# egopol

./: .gitignore  CLAUDE.md  Cargo.toml  EMCORE_FEATURE_CONTRACT.md
zuicchini/: .gitignore  CONVERGENCE_PLAN.yaml  Cargo.toml  DIVERGENCE_INDEX.yaml  TESTING_OPPORTUNITIES.md
zuicchini/_fix/: design_decisions.yaml
zuicchini/benches/: interaction.rs  interaction_iai.rs  scaled_tree.rs  scaled_tree_iai.rs
zuicchini/examples/: bench_interaction.rs  bench_zoom_animate.rs  bench_zoom_depth.rs  diag_button.rs  input_demo.rs  paint_demo.rs  profile_hotpaths.rs  profile_testpanel.rs  signal_timer_demo.rs  test_pack_layout.rs  test_panel.rs  test_toolkit.rs  toolkit_demo.rs  tree_expansion_demo.rs
zuicchini/golden_debug/: PHASE6C_REPORT.md
zuicchini/golden_gen/: Makefile  gen_golden.cpp  golden_format.h
zuicchini/prompts/: master-contract.json  prompt-master-audit.md  prompt-master-audit.md.bak
zuicchini/scripts/: batch1_renames.json  batch2_renames.json  batch3_renames.json  batch4_renames.json  batch5_renames.json  batch6_renames.json  file_mapping.json  fix_imports.py  inventory.json  method_renames.json  phase3_flatten.py  phase4_apply_per_file.py  phase4_method_renames.py  phase4_methods.py  phase4_type_renames.py
zuicchini/stale/: 03a-verify-golden-coverage.md  04a-diagnose-divergences.md  06a-diagnose-stubs.md  06b-close-stubs.md  07-render-thread-pool.md  08-test-panel-standalone.md  09a-diagnose-visual-bugs.md  09b-diagnose-round2.md  09b-fix-visual-bugs.md  10-implement-control-panel-reviewed.md  10-implement-control-panel.md  HARNESS.md
(+880 files in other folders)
