[package]
name = "zuicchini"
version = "0.1.0"
edition = "2021"
description = "A zoomable UI framework inspired by Eagle Mode's emCore"
license = "MIT"

[dev-dependencies]
rand = "0.9"
criterion = { version = "0.8", features = ["html_reports"] }
gungraun = "0.17"

[[bench]]
name = "interaction"
harness = false

[[bench]]
name = "interaction_iai"
harness = false

[[bench]]
name = "scaled_tree"
harness = false

[[bench]]
name = "scaled_tree_iai"
harness = false

[dependencies]
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2.183"
libloading = "0.9.0"
log = "0.4"
nix = { version = "0.31.2", features = ["fs"] }
pollster = "0.4"
slotmap = "1"
wgpu = "28"
winit = "0.30"
zbus = "5"
